# teamtalk_reg_system

./: .env.example  .gitignore  README.md  README.ru.md  TRANSLATING.md  babel.cfg  manage-locales.py  project_development_guide.md  pyproject.toml  requirements.txt  run.py  users.db
ai-documentation/: TeamTalk5.py  docs_060625232757_dir2txt.txt  pytalk_070625061017_dir2txt.txt
bot/core/: config.py  database.py  localization.py  tasks.py  teamtalk_client.py
bot/core/db/: __init__.py  crud.py  models.py  session.py
bot/fastapi_app/: TESTING.md  dependencies.py  main.py  utils.py
bot/fastapi_app/routers/: registration.py
bot/fastapi_app/templates/: register.html
bot/fastapi_app/tests/: test_registration_routes.py
bot/teamtalk/: __init__.py  backoff.py  connection.py  events.py  users.py
bot/telegram_bot/: main.py  states.py
bot/telegram_bot/callbacks/: admin_callbacks.py
bot/telegram_bot/handlers/: admin.py  reg_callback_data.py  reg_callback_handlers.py  reg_command_handlers.py  reg_fsm_message_handlers.py  reg_logic_helpers.py  registration.py
bot/telegram_bot/keyboards/: admin_keyboards.py
bot/telegram_bot/middlewares/: ban_middleware.py  db_middleware.py
bot/utils/: file_generator.py
bot/web_app/: main.py
bot/web_app/routes/: registration.py
bot/web_app/static/js/: countdown.js
bot/web_app/templates/: choose_lang.html  register_unified.html
core/: config.py
locales/: messages.pot
locales/ru/LC_MESSAGES/: messages.po
telegram_bot/: main.py
telegram_bot/handlers/: admin.py  registration.py
utils/: file_generator.py  network.py
web_app/templates/: register_en.html  register_ru.html
